--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-welcome to jenkins class
-this is ci/cd class in flm
-we integrated webhooks
-this is updatedone
-123456
-09876543
-12345678
-!@#$%^&
+Accessed Jenkins Dashboard
+Pulled code from github
+Build & Test by Maven
+storing war file(Artifact) in nexus repository
